--- a/project/build.properties
+++ b/project/build.properties
@@ -2,7 +2,7 @@
 #Tue Feb 22 09:58:41 GMT 2011
 project.organization=de.sciss
 project.name=fingertree
-sbt.version=0.7.4
+sbt.version=0.7.7
 project.version=0.11
-build.scala.versions=2.8.1
+build.scala.versions=2.9.0 2.8.1
 project.initialize=false
